# autocone

./: .README.md.swp  AD_control.py  CMakeLists.txt  README.md  autocone_calc.py  car1_rand.py  car_properties.txt  car_wp_pub.py  gps_manipulation.py  list_manipulation.py  mapper.py  package.xml  parambackup 1-25-18.param  setup.py  setup.sh  setup.sh.save  vectornav_pub.py  vectornav_pub_test.py  veh_cont.py  veh_pub.py  veh_pub_test.py  veh_sub.py  wp_lister_pubber.py
Fall 2017 to Spring 2018/MissionPlanner-1.3.50/: ParameterMetaDataBackup.xml  (+2 more)
MissionPlanner-1.3.50/: ChangeLog.txt  GMap.NET.WindowsForms.xml  MissionPlanner.exe.config  SharpAdbClient.xml  followmeraw.txt
Quick Fix 1-19/: VehicleSwitcher.au3
SW Files/: Assem3.SLDASM  BigRadio Assembly.SLDASM  Cone Mounting Plate.SLDPRT  GPS Pix Radio Mount mk2.SLDPRT  GPS Rough Model.SLDPRT  Light Bar mounting.SLDPRT  Light Bar mounting2.SLDPRT  Mounting Flange.SLDPRT  Mounting Flange2.SLDPRT  Pix Cover.SLDPRT  PixRacer Rough Model.SLDPRT  Temp 2nd GPS Mast.SLDPRT  mountmkII_dimensions.txt
devel/: .catkin  .rosinstall  setup.sh
install/: setup.sh
launch/: .nimbro_lead_vehicle.launch.swp  .nimbro_rover.launch.swp  combined_controller.launch  combined_lead_vehicle.launch  combined_rover.launch  copy_launch_files.sh.save  nimbro_lead_vehicle.launch  nimbro_topics_lead_vehicle.yaml  spline_controller.launch  vel_hdg_controller.launch
nodes/: veh_hdg_vel_cont  veh_spline_pub
referencemat/: wp_lister_dist.py  wp_lister_test.py
src/: geometry.py  spline_controller.py  test_hdg_control.py  vehicle_simulator.py
(+115 files in other folders)
