<?xml version="1.0"?>
<package format="2">
  <name>autocone</name>
  <version>0.0.1</version>
  <description>A set of python scripts implementing a path following system for a robot following a lead gps source</description>

  <maintainer email="gchustz@tamu.edu">George Chustz</maintainer>
  <author email='gchustz@tamu.edu'>George Chustz</author>
  <license>GNU GPL v3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>   

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>